Detail Preview Screen Almost Ready / Link for attached document left /

--- a/www/index.html
+++ b/www/index.html
@@ -80,7 +80,7 @@
 				<div class="col content-wrapper">
 					{{#each plenary}}
 					<div class="row short-preview">
-						<div class=".col-67 description">
+						<div class="col-67 description">
 							{{dscrShort}}
 						</div>
 						<div class="col-33">
@@ -93,7 +93,7 @@
 					{{/each}}
 
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -102,7 +102,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
@@ -192,7 +192,7 @@
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
