--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -51,8 +51,7 @@
             </div>
         </div>
         <!-- END home-tpl -->
-
-        <div class="plenary-tpl">
+        <div class="plenary-tpl hidden">
             <div class="bar bar-header">
                 <button class="back-btn button button-icon">
                 <img src="assets/img/back-arrow.png" alt="ico" class="ico">
@@ -71,7 +70,6 @@
             </div>
             <div class="row">
                 <div class="col content-wrapper">
-
                     <div class="row short-preview">
                         <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
@@ -150,11 +148,8 @@
                             </div>
                         </div>
                     </div>
-                    
-
                 </div>
             </div>
-
             <div class="tabs tabs-icon-top bottom-tabs">
                 <a class="tab-item active">
                 <i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
@@ -179,5 +174,63 @@
             </div>
         </div>
         <!-- END plenary-tpl -->
+        <div class="plenary-tpl-detail-preview">
+            <div class="bar bar-header">
+                <button class="back-btn button button-icon">
+                <img src="assets/img/back-arrow.png" alt="ico" class="ico">
+                </button>
+                <h1 class="title">Пленарни заседания</h1>
+            </div>
+            <div class="row screen-wrapper">
+                <div class="col content-wrapper">
+                    <div class="row detail-preview">
+                        <div class="col">
+                            <div class="row">
+                                <h2 class="title">Пленарно заседание</h2>
+                            </div>
+                            <div class="row">
+                                <div class="custom-row">
+                                    <div class="date">02.04.2014</div>
+                                    <div class="date-separator">-</div>
+                                    <div class="date">12.04.2014</div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col description">
+                                    1. Проект на решение за създаване на Временна комисия за осъществяване на контрол по разходването на бюджетни средства и изпълнението на проект за възпрепятстващо съоръжение с дължина от 30 км по линията на държавната граница в зоната за отговорност на ГПУ - Елхово и ГПУ - Болярово при РДГП Елхово (Вносители: Бойко Борисов и група народни представители, 25.2.2014 г.).</br>
+                                    2. Второ гласуване на Законопроект за изменение и допълнение на Закона за собствеността и ползването на земеделските земи (Общ законопроект, изготвен на основата на приетите на първо гласуване на 11.3.2014 г. два законопроекта с вносители: Десислава Танева и група народни представители, 30.1.2014 г.; Светла Бъчварова и група народни представители, 6.2.2014 г).</br>
+                                    3. Проект за решение против налагането на санкции от страна на ЕС по отношение на Руската федерация, както и неучастието на Република България в прилагането им (Вносители: Волен Сидеров и група народни представители, 17.03.2014 г.).</br>
+                                    4. <a href="#" class="external-link">Законопроект за изменение на Изборния кодекс</a> (Вносители: Цецка Цачева, Красимир Велчев, Десислава Атанасова и Димитър Главчев, 26.3.2014 г.) - точка първа за четвъртък, 3.4.2014 г.</br>
+                                    5. Първо гласуване на Законопроект за изменение и допълнение на <a href="#" class="external-link">Закона за автомобилните превози</a> (Вносители: Камен Костадинов, Ердинч Хайрула и Георги Свиленски, 6.2.2014 г.).
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tabs tabs-icon-top bottom-tabs">
+                <a class="tab-item active">
+                <i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
+                П. заседания
+                </a>
+                <a class="tab-item">
+                <i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
+                П. Контрол
+                </a>
+                <a class="tab-item">
+                <i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
+                П. Комисии
+                </a>
+                <a class="tab-item">
+                <i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
+                Новини
+                </a>
+                <a class="tab-item">
+                <i class="icon ion-gear-a"></i>
+                Настройки
+                </a>
+            </div>
+        </div>
+        <!-- END plenary-tpl-detail-preview -->
     </body>
 </html>
