--- a/platforms/android/assets/www/staticHTML.html
+++ b/platforms/android/assets/www/staticHTML.html
@@ -71,124 +71,105 @@
             </div>
             <div class="row">
                 <div class="col content-wrapper">
+
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            </div>
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            </div>
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            </div>
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            </div>
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            </div>
                         </div>
                     </div>
                     <div class="row short-preview">
-                        <div class=".col-67 description">
+                        <div class="col-67 description">
                             Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
                         </div>
                         <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+                            </div>
                         </div>
                     </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
-                    <div class="row short-preview">
-                        <div class=".col-67 description">
-                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-                        </div>
-                        <div class="col-33">
-                            <div class="date">12.04.2014</div>
-                            <button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-                        </div>
-                    </div>
+                    
 
                 </div>
             </div>
 
             <div class="tabs tabs-icon-top bottom-tabs">
-                <a class="tab-item">
-                <i class="icon ion-home"></i>
+                <a class="tab-item active">
+                <i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
                 П. заседания
                 </a>
                 <a class="tab-item">
-                <i class="icon ion-star"></i>
+                <i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
                 П. Контрол
                 </a>
                 <a class="tab-item">
-                <i class="icon ion-gear-a"></i>
+                <i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
                 П. Комисии
                 </a>
                 <a class="tab-item">
-                <i class="icon ion-gear-a"></i>
+                <i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
                 Новини
                 </a>
                 <a class="tab-item">
