--- a/www/index.html
+++ b/www/index.html
@@ -56,6 +56,7 @@
 	</div>
 </script>
 
+
 <script id="plenary-tpl" type="text/x-handlebars-template">
 		<div class="plenary-tpl" style="height: 93%; overflow: auto;">
 			<div class="bar bar-header">
@@ -95,136 +96,166 @@
 						</div>
 					</div>
 					{{/each}}
-
-					<div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn" onclick="openAppUrl('#plenaryDetail?id=1');"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div>
-
-					<div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div>
-
-					<div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div>
-
-					<div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div>
-
-					<div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div>
-
-					<div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div>
-
-					<div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div>
-
-					<div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div>
-
-					<div class="row short-preview">
-						<div class="col-67 description">
-							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
-						</div>
-						<div class="col-33">
-							<div class="custom-row">
-								<div class="date">12.04.2014</div>
-							</div>
-							<div class="custom-row">
-								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
-							</div>
-						</div>
-					</div>
-
-
 				</div>
 			</div>
+					<!-- Remove it - testing data -->
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row short-preview">
+                        <div class="col-67 description">
+                            Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+                        </div>
+                        <div class="col-33">
+                            <div class="custom-row">
+                                <div class="date">12.04.2014</div>
+                            </div>
+                            <div class="custom-row">
+                                <button class="button icon-left ion-eye preview-btn"onclick="openAppUrl('#plenaryDetailUrl?id=1');"><span class="txt">Преглед</span></button>
+                            </div>
+                        </div>
+                    </div>
+					<!-- /Remove it - testing data -->
 
 			<div class="tabs tabs-icon-top bottom-tabs">
 				<a class="tab-item active" href="#plenary">
@@ -248,10 +279,8 @@
 					Настройки
 				</a>
 			</div>
-
 		</div>
 </script>
-
 
 
 <script id="plenary-tpl-detail-preview" type="text/x-handlebars-template">
@@ -263,7 +292,7 @@
 			<h1 class="title">Пленарни заседания</h1>
 		</div>
 
-		<div class="row screen-wrapper">
+		<div class="row">
 			<div class="col content-wrapper">
 				<div class="row detail-preview">
 					<div class="col">
@@ -280,7 +309,7 @@
 						<div class="row">
 							<div class="col description">
 								{{#each agenda}}
-									{{id}}. {{#ifCond isBill '1'}}<a href="javascript:openUrlInExternal('{{billLink}}')" style="background-color: cyan;">{{/ifCond}}
+									{{id}}. {{#ifCond isBill '1'}}<a href="javascript:openUrlInExternal('{{billLink}}')" class="external-link">{{/ifCond}}
 										{{itemText}}
 									{{#ifCond isBill '1'}}</a>{{/ifCond}}<br />
 								{{/each}}
@@ -291,28 +320,28 @@
 			</div>
 		</div>
 
-			<div class="tabs tabs-icon-top bottom-tabs">
-				<a class="tab-item active" href="#plenary">
-					<i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
-					П. заседания
-				</a>
-				<a class="tab-item" href="#controll">
-					<i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
-					П. Контрол
-				</a>
-				<a class="tab-item" href="#committee">
-					<i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
-					П. Комисии
-				</a>
-				<a class="tab-item" href="#news">
-					<i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
-					Новини
-				</a>
-				<a class="tab-item" href="#options">
-					<i class="icon ion-gear-a"></i>
-					Настройки
-				</a>
-			</div>
+		<div class="tabs tabs-icon-top bottom-tabs">
+			<a class="tab-item active" href="#plenary">
+				<i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
+				П. заседания
+			</a>
+			<a class="tab-item" href="#controll">
+				<i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
+				П. Контрол
+			</a>
+			<a class="tab-item" href="#committee">
+				<i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
+				П. Комисии
+			</a>
+			<a class="tab-item" href="#news">
+				<i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
+				Новини
+			</a>
+			<a class="tab-item" href="#options">
+				<i class="icon ion-gear-a"></i>
+				Настройки
+			</a>
+		</div>
 
 	</div>
 </script>
