--- a/www/index.html
+++ b/www/index.html
@@ -288,9 +288,6 @@
 				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
 			</button>
 			<h1 class="title">Парламентарен контрол</h1>
-			<button class="search-btn button button-icon" id="btnSearchControll">
-				<img src="assets/img/search-icon.png" alt="ico" class="ico">
-			</button>
 		</div>
 
 		<div class="row screen-wrapper">
@@ -424,6 +421,70 @@
 
 	</div>
 </script>
+	
+<script id="committee-tpl-detail-preview" type="text/x-handlebars-template">
+	<div class="committee-tpl-detail-preview" style="height: 93%; overflow: auto;">
+		<div class="bar bar-header">
+			<button class="back-btn button button-icon" onclick="javascript:history.back(1)">
+				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+			</button>
+			<h1 class="title">Заседания на комисии</h1>
+		</div>
+
+		<div class="row screen-wrapper">
+			<div class="col content-wrapper">
+				<div class="row detail-preview">
+					<div class="col">
+						<div class="row">
+							<h2 class="title">Заседание на {{committeeName}}</h2>
+						</div>
+						<div class="row">
+							<div class="custom-row">
+								<div class="date">{{date}}</div>
+								<div class="time">{{time}}</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="custom-row address">
+								<span>{{building}}</span>, зала <span>{{hall}}</span>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col description">
+									{{{agenda}}}
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="tabs tabs-icon-top bottom-tabs">
+			<a class="tab-item" href="#plenary">
+				<i class="icon"><img src="assets/img/plenary-ico-dark.svg" class="section-icons plenary-ico"></i>
+				П. заседания
+			</a>
+			<a class="tab-item" href="#controll">
+				<i class="icon"><img src="assets/img/controll-ico-dark.svg" class="section-icons controll-ico"></i>
+				П. Контрол
+			</a>
+			<a class="tab-item active" href="#committee">
+				<i class="icon"><img src="assets/img/committee-ico-dark.svg" class="section-icons committee-ico"></i>
+				П. Комисии
+			</a>
+			<a class="tab-item" href="#news">
+				<i class="icon"><img src="assets/img/news-ico-dark.svg" class="section-icons news-ico"></i>
+				Новини
+			</a>
+			<a class="tab-item" href="#options">
+				<i class="icon ion-gear-a"></i>
+				Настройки
+			</a>
+		</div>
+
+	</div>
+</script>
+
 	
 		<script id="news-tpl" type="text/x-handlebars-template">
 			<div class="topcoat-navigation-bar" style="height: 80px;">
