--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/ionic.min.css">
 	<link href="assets/css/styles.css" rel="stylesheet">
 	<link href="assets/css/pageslider.css" rel="stylesheet">
+	
+	<style>
+	.unsubscribedText {color: #AAA;}
+	</style>
 </head>
 <body>
 
@@ -512,7 +516,7 @@
 						<div class="row relative">
 							<div class="col description">
 								<h2 class="title">{{commName}}</h2>
-								<div class="subscribe-btn active ion-checkmark-circled" id="chk_comm_subscribe" data-committee-id="{{commId}}"></div>
+								<div class="subscribe-btn active ion-checkmark-circled" data-committee-id="{{commId}}"></div>
 							</div>
 						</div>
 						<div class="row">
