Committees List view

--- a/www/index.html
+++ b/www/index.html
@@ -7,10 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/ionic.min.css">
 	<link href="assets/css/styles.css" rel="stylesheet">
 	<link href="assets/css/pageslider.css" rel="stylesheet">
-	
-	<style>
-	.unsubscribedText {color: #AAA;}
-	</style>
+	<link href="assets/css/app_effects.css" rel="stylesheet">
 </head>
 <body>
 
@@ -464,7 +461,7 @@
 						</div>
 						<div class="row">
 							<div class="col description">
-									{{{agenda}}}
+								{{{agenda}}}
 							</div>
 						</div>
 					</div>
