--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -7,10 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/ionic.min.css">
 	<link href="assets/css/styles.css" rel="stylesheet">
 	<link href="assets/css/pageslider.css" rel="stylesheet">
-	
-	<style>
-	.unsubscribedText {color: #AAA;}
-	</style>
+	<link href="assets/css/app_effects.css" rel="stylesheet">
 </head>
 <body>
 
