comittie templ fixes

--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="assets/css/ionic.min.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+        <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
         <title>Static Parliament App HTML</title>
     </head>
     <body>
@@ -709,7 +709,7 @@
                 <div class="col content-wrapper">
 					
 					<!-- Това е моя код -->
-					<div class="row short-preview committeeListItem">
+					<div class="row short-preview">
 						<div class="col">
 							<div class="row relative">
 								<div class="col description">
