Committees List view

--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -857,7 +857,7 @@
             </div>
             
 			<div class="tabs tabs-icon-top bottom-tabs">
-				<a class="tab-item" href="#comm-list-save">
+				<a class="tab-item" href="javascript:void(0)" id="btn_comm_list_save">
 					<i class="icon"><img src="assets/img/date-icon.png" class="section-icons plenary-ico"></i>
 					Запис
 				</a>
