--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -713,8 +713,10 @@
 						<div class="col">
 							<div class="row relative">
 								<div class="col description">
-									<h2 class="title">Име на комисия, което може и често се случва да е ужасно дълго от по няколко реда и да е по-описателно от роман на Толстой</h2>
-									<div class="subscribe-btn active ion-checkmark-circled" data-committee-id="{{commId}}"></div>
+									<h2 class="title">
+                                        <span class="subscribe-btn active ion-checkmark-circled" data-committee-id="{{commId}}"></span>
+                                        Име на комисия, което може и често се случва да е ужасно дълго от по няколко реда и да е по-описателно от роман на Толстой</h2>
+									
 								</div>
 							</div>
 							<div class="row">
