--- a/www/index.html
+++ b/www/index.html
@@ -513,8 +513,10 @@
 					<div class="col">
 						<div class="row relative">
 							<div class="col description">
-								<h2 class="title">{{commName}}</h2>
-								<div class="subscribe-btn active ion-checkmark-circled" data-committee-id="{{commId}}"></div>
+								<h2 class="title">
+									<span class="subscribe-btn active ion-checkmark-circled" data-committee-id="{{commId}}"></span>
+									{{commName}}
+								</h2>
 							</div>
 						</div>
 						<div class="row">
