--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -532,10 +532,11 @@
 		</div>
 
 		<div class="tabs tabs-icon-top bottom-tabs">
-			<a class="tab-item" href="javascript:void(0)" id="btn_comm_list_save">
+			<!-- <a class="tab-item" href="javascript:void(0)" id="btn_comm_list_save">
 				<i class="icon"><img src="assets/img/date-icon.png" class="section-icons plenary-ico"></i>
 				Запис
-			</a>
+			</a> -->
+			<button href="javascript:void(0)" id="btn_comm_list_save" class="button icon-left ion-compose save-btn"><span class="txt">Запис</span></button>
 		</div>
 
 	</div>
