link design fixes

--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -176,7 +176,7 @@
         </div>
         <!-- END plenary-tpl -->
         
-        <div class="plenary-tpl-detail-preview hidden">
+        <div class="plenary-tpl-detail-preview">
             <div class="bar bar-header">
                 <button class="back-btn button button-icon">
                 <img src="assets/img/back-arrow.png" alt="ico" class="ico">
@@ -883,7 +883,7 @@
             </div>
         </div>
         <!-- END committee-tpl-detail-preview -->
-        <div class="news-tpl">
+        <div class="news-tpl hidden">
             <div class="bar bar-header">
                 <button class="back-btn button button-icon">
                 <img src="assets/img/back-arrow.png" alt="ico" class="ico">
