Fix ios static header and footer problem with snap.js

--- a/www/staticHTML.html
+++ b/www/staticHTML.html
@@ -313,10 +313,10 @@
 				</div>
 			</div>
 			<div class="bar bar-footer">					
-				<button class="back-btn button button-icon">
-				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+				<button class="back-btn button button-icon" id="footerBackButton">
+					<img src="assets/img/back-arrow.png" alt="ico" class="ico">
 				</button>					
-				<button class="button button-icon ion-ios7-gear"></button>
+				<button class="button button-icon ion-ios7-gear" id="footerSettingsButton"></button>
 			</div>
 		</div>
 		<!-- END plenary-tpl -->
