--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -70,6 +70,118 @@
 						</div>
 					</div>
 				</div>
+			
+				<div class="row short-preview">
+					<div class="col-67 description">
+						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+					</div>
+					<div class="col-33">
+						<div class="custom-row">
+							<div class="date">12.04.2014</div>
+						</div>
+						<div class="custom-row">
+							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+						</div>
+					</div>
+				</div>
+			
+				<div class="row short-preview">
+					<div class="col-67 description">
+						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+					</div>
+					<div class="col-33">
+						<div class="custom-row">
+							<div class="date">12.04.2014</div>
+						</div>
+						<div class="custom-row">
+							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+						</div>
+					</div>
+				</div>
+			
+				<div class="row short-preview">
+					<div class="col-67 description">
+						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+					</div>
+					<div class="col-33">
+						<div class="custom-row">
+							<div class="date">12.04.2014</div>
+						</div>
+						<div class="custom-row">
+							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+						</div>
+					</div>
+				</div>
+			
+				<div class="row short-preview">
+					<div class="col-67 description">
+						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+					</div>
+					<div class="col-33">
+						<div class="custom-row">
+							<div class="date">12.04.2014</div>
+						</div>
+						<div class="custom-row">
+							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+						</div>
+					</div>
+				</div>
+			
+				<div class="row short-preview">
+					<div class="col-67 description">
+						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+					</div>
+					<div class="col-33">
+						<div class="custom-row">
+							<div class="date">12.04.2014</div>
+						</div>
+						<div class="custom-row">
+							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+						</div>
+					</div>
+				</div>
+			
+				<div class="row short-preview">
+					<div class="col-67 description">
+						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+					</div>
+					<div class="col-33">
+						<div class="custom-row">
+							<div class="date">12.04.2014</div>
+						</div>
+						<div class="custom-row">
+							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+						</div>
+					</div>
+				</div>
+			
+				<div class="row short-preview">
+					<div class="col-67 description">
+						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+					</div>
+					<div class="col-33">
+						<div class="custom-row">
+							<div class="date">12.04.2014</div>
+						</div>
+						<div class="custom-row">
+							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+						</div>
+					</div>
+				</div>
+			
+				<div class="row short-preview">
+					<div class="col-67 description">
+						Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+					</div>
+					<div class="col-33">
+						<div class="custom-row">
+							<div class="date">12.04.2014</div>
+						</div>
+						<div class="custom-row">
+							<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+						</div>
+					</div>
+				</div>
 
 			</div>
 		</div>
@@ -151,7 +263,6 @@
 <script src="lib/jquery.js"></script>
 <script src="lib/fastclick.js"></script>
 <script src="lib/handlebars.js"></script>
-<script src="lib/pageslider.js"></script>
 <script src="lib/snap.js"></script>
 
 <script src="js/adapters/FileStorage.js"></script>
