--- a/platforms/ios/www/staticHTML.html
+++ b/platforms/ios/www/staticHTML.html
@@ -76,7 +76,7 @@
 		
 		<!-- All app pages go here -->
 		
-		<div class="home-tpl">
+		<div class="home-tpl hidden">
 
 			<a href="javascript:void(0);" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 
@@ -93,7 +93,7 @@
 		</div>
 		<!-- END home-tpl -->
 		
-		<div class="plenary-tpl hidden">
+		<div class="plenary-tpl">
 			<div class="bar bar-header">
 				<a href="javascript:void(0)" id="open-left" class="ion-navicon-round side-menu-btn"></a>
 	
@@ -127,14 +127,196 @@
 							</div>
 						</div>
 					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
+					<div class="row short-preview">
+						<div class="col-67 description">
+							Това е описанието на конкретното парламентарно заседание, коетпо може да бъде на два реда, но ако е повече от 255 символа се изря...
+						</div>
+						<div class="col-33">
+							<div class="custom-row">
+								<div class="date">12.04.2014</div>
+							</div>
+							<div class="custom-row">
+								<button class="button icon-left ion-eye preview-btn"><span class="txt">Преглед</span></button>
+							</div>
+						</div>
+					</div>
 	
 				</div>
 			</div>
 			<div class="bar bar-footer">					
-				<button class="back-btn button button-icon">
-				<img src="assets/img/back-arrow.png" alt="ico" class="ico">
+				<button class="back-btn button button-icon" id="footerBackButton">
+					<img src="assets/img/back-arrow.png" alt="ico" class="ico">
 				</button>					
-				<button class="button button-icon ion-ios7-gear"></button>
+				<button class="button button-icon ion-ios7-gear" id="footerSettingsButton"></button>
 			</div>
 		</div>
 		<!-- END plenary-tpl -->
